--- a/lab5.1.tex
+++ b/lab5.1.tex
@@ -4,7 +4,7 @@
 \title{Лабораторная работа №5.1 \\ \textit{Построение графиков в программе SciDAVis}}
 \begin{document}
 \maketitle
-Не смотря на то, что Excel успешно справляется с большинством задач анализа и визуализации данных он используется в первую очередь для предварительной обработки данных. Для построение красивых графиков используются другие программы, такие как: \href{https://www.originlab.com/index.aspx?go=Products/Origin}{Origin и OriginPro}, \href{https://www.python.org/}{Python} + библиотеки matplotlib+numpy+scipy (самый продвинутый и гибкий набор инструментов!), \href{https://scidavis.sourceforge.net/}{SciDAVis}, \href{https://www.ctan.org/pkg/pgfplots}{pgfplots} (пакет \LaTeX, который используется в данном сборнике лабораторных работ), Gnuplot, LabPlot, Grace QtiPlot и др. Origin\footnote{С инструкцией по установке OriginPro можно ознакомиться в приложении} является наиболее универсальной и многофункциональной программой, при этом является платной. Python с подключенными библиотеками предлагает самый продвинутый и гибкий набор инструментов, но при этом он сложен для новичков и управление осуществляется без \href{https://ru.wikipedia.org/wiki/%D0%93%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D1%84%D0%B5%D0%B9%D1%81_%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8F}{GUI}.
+Не смотря на то, что Excel успешно справляется с большинством задач анализа и визуализации данных он используется в первую очередь для предварительной обработки данных. Для построение красивых графиков используются другие программы, такие как: \href{https://www.originlab.com/index.aspx?go=Products/Origin}{Origin и OriginPro}, \href{https://www.python.org/}{Python} + библиотеки matplotlib+numpy+scipy, \href{https://scidavis.sourceforge.net/}{SciDAVis}, \href{https://www.ctan.org/pkg/pgfplots}{pgfplots} (пакет \LaTeX, который используется в данном сборнике лабораторных работ), Gnuplot, LabPlot, Grace QtiPlot и др. Origin\footnote{С инструкцией по установке OriginPro можно ознакомиться в приложении} является наиболее универсальной и многофункциональной программой, при этом является платной. Python с подключенными библиотеками предлагает самый продвинутый и гибкий набор инструментов, но при этом он сложен для новичков и управление осуществляется без \href{https://ru.wikipedia.org/wiki/%D0%93%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D1%84%D0%B5%D0%B9%D1%81_%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D1%8F}{GUI}.
 
 В силу изложенного предлагается остановиться на программе SciDAVis. SciDAVis~---~это бесплатное и свободное программное обеспечение, которое предлагает пользователю дружелюбный и интуитивно понятный интерфейс. 
 
@@ -31,7 +31,7 @@
     \item Дайте названия осей в формате: \verb|{физ. вел.}, {ед. изм.}|, например x -- сила тока в амперах, а y -- мощность в ваттах, или можете придумать названия осей сами, вспомнив другие квадратичные зависимости в физике. Далее расположите названия осей по центру числовой шкалы. Параметры шрифта по возможности должны быть такими же, как и в предполагаемом документе, где будет находится график: кегль -- 14 пт, семейство -- Roman);
     \item Проведите линейную регрессию для точек выборки;
     \item Задайте относительную погрешность 5\% для оси Y;
-    \item Оформите легенду, добавив название <<Экспериментальные точки>> для точек выборки, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с правильно округлёнными погрешностями (можно получить из консоли, где появляется информация после добавления линейной регрессии);
+    \item Оформите \href{https://www.stimulsoft.com/ru/documentation/online/user-manual/index.html?report_internals_charts_chart_tab_legend.htm}{легенду}, добавив название <<Экспериментальные точки>> для точек выборки, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с размерностями и с правильно округлёнными погрешностями этих параметров (можно получить из консоли, где появляется информация после добавления линейной регрессии);
     \item Цветовую палитру можете выбрать любую, главное чтобы цвета хорошо контрастировали с фоном;
     \item Экспортировать рисунок в векторном формате, например в \verb|.svg|.
 \end{enumerate}
