--- a/lab5.tex
+++ b/lab5.tex
@@ -44,13 +44,13 @@
 		' Сюда надо поместить код из листинга
 	End Sub  
 	\end{lstlisting}
-	\item При запуске кода в первом и втором столбцах таблицы появится сгенерированные выборки $x_i$ и $y_i$ соответственно объёмом 50 элементов.
+	\item При запуске кода в первом и втором столбцах таблицы появится случайно сгенерированная выборка из элементов $x_i$ и $y_i$ объёмом 50 элементов.
 \end{itemize}
 \section{Ручной поиск параметров} \label{manualMethod}
 Аппроксимировать полученную зависимость будем линейной функцией вида $f(x,a_1,a_2) = a_1x + a_2$.
 \begin{enumerate}
     \item Подставив $f(x,a_1,a_2)$ в формулу \ref{leastSquares} найдите частные производные\footnote{Более подробно о МНК можно узнать в учебнике \cite{Stepanova2014} на стр. 45}. В Excel можно и нужно производить расчёты таких коэффициентов как $\sum x_i, \sum x_i^2, \sum x_iy_i$ и т.п. \textbf{Получение частных производных и их дальнейшее упрощение нужно записывать в тетрадке!}
-    \item Решите полученную систему линейных уравнений. Запишите полученный результат ($a_1$ и $a_2$) в отдельных ячейках таблицы Excel.
+    \item Решите полученную систему линейных уравнений (можно воспользоваться способом решения СЛУ, который описан в \href{https://github.com/PilipenkoKirill/MeasurementLabs/blob/main/lab6.pdf}{лабораторной работе №6}). Запишите полученный результат ($a_1$ и $a_2$) в отдельных ячейках таблицы Excel.
 \end{enumerate}
 \section{Машинный поиск параметров}
 \begin{enumerate}
