--- a/lab8.tex
+++ b/lab8.tex
@@ -24,7 +24,7 @@ every last row/.style={after row=\bottomrule}}
 		\item На вкладке \texttt{Дополнительно} нажмите кнопку \texttt{Переменные среды…};
 		\item В разделе \texttt{Переменные среды пользователя} нажмите кнопку \texttt{Создать}. Укажите имя переменной \path{PTC_D_LICENSE_FILE} и путь к исполняемому файлу \path{C:\Program Files\PTC\PTC_D_SSQ.dat}, затем подтвердить изменения.
 	\end{enumerate}
-	\item Установите PTC Mathcad Prime 9.0.0.0 Win64. Для этого необходимо иметь предустановленную на компьютере программу DAEMON Tools или её свободный аналог --- \href{https://www.elby.ch/products/vcd.html}{Virtual CloneDrive};
+	\item Установите PTC Mathcad Prime 9.0.0.0 Win64. Для этого необходимо иметь предустановленную на компьютере программу DAEMON Tools или её свободный аналог --- \href{https://mega.nz/file/Fd0T1JDA#HEkbzw68-mowukA16ODSRbXf7mGBfPjmXqBnG31CxF8}{Virtual CloneDrive};
 	\item Все файлы в папке \path{_SolidSQUAD_\Mathcad Prime 9.0.0.0} скопировать и вставить с заменой в папку с установленной программой (по умолчанию: \path{C:\Program Files\PTC\Mathcad Prime 9.0.0.0});
 	\item При первом запуске Mathcad Prime 9.0 при запросе лицензии в PTC Mathcad License Wizard: Выберите «Настроить продукт для использования существующей лицензии» > «Далее» > «Файл» > «Обзор» > (перейдите к файлу \path{PTC_D_SSQ.dat}, сохраненному на вашем компьютере) > Настройка лицензии > Выход.
 \end{enumerate}
