Добавление индексов в 4 варианте 6 лабы

--- a/lab5.1.tex
+++ b/lab5.1.tex
@@ -1,4 +1,4 @@
-%!TEX program = xelatex.exe
+%!TEX program = lualatex.exe
 \documentclass[14pt,a4paper]{article}
 \input{setup.tex}
 \title{Лабораторная работа №5.1 \\ \textit{Построение графиков в программе SciDAVis}}
@@ -28,12 +28,15 @@
 \section{Построение графиков}
 \begin{enumerate}
     \item Используя данные из предыдущей лабораторной работы (№5) составьте график. 
-    \item Дайте названия осей в формате: \verb|{физ. вел.}, {ед. изм.}|, например x -- сила тока в амперах, а y -- мощность в ваттах, или можете придумать названия осей сами, вспомнив другие квадратичные зависимости в физике. Далее расположите названия осей по центру числовой шкалы. Параметры шрифта по возможности должны быть такими же, как и в предполагаемом документе, где будет находится график: кегль -- 14 пт, семейство -- Roman);
-    \item Добавьте аппроксимацию полиномом второй степени для точек выборки;
-    \item Задайте относительную погрешность 5\% для оси Y;
-    \item Оформите \href{https://www.stimulsoft.com/ru/documentation/online/user-manual/index.html?report_internals_charts_chart_tab_legend.htm}{легенду}, добавив для точек выборки название <<Экспериментальные точки>>, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с размерностями и с правильно округлёнными погрешностями этих параметров (можно получить из консоли, где появляется информация после добавления полинома);
-    \item Цветовую палитру можете выбрать любую, главное чтобы цвета хорошо контрастировали с фоном;
-    \item Экспортировать рисунок в векторном формате, например в \verb|.svg|.
+    \item Дайте названия осей в формате: \verb|{физ. вел.}, {ед. изм.}|, например x -- сила тока в амперах, а y -- мощность в ваттах, или можете придумать названия осей сами, вспомнив другие квадратичные зависимости в физике. Далее расположите названия осей по центру числовой шкалы. Параметры шрифта по возможности должны быть такими же, как и в предполагаемом документе, где будет находится график: кегль -- 14 пт, семейство -- Roman.
+    \item Добавьте аппроксимацию полиномом второй степени для точек выборки.
+    \item Задайте относительную погрешность 5\% для оси Y.
+    \item Оформите \href{https://www.stimulsoft.com/ru/documentation/online/user-manual/index.html?report_internals_charts_chart_tab_legend.htm}{легенду}, добавив для точек выборки название <<Экспериментальные точки>>, а для аппроксимирующей линии укажите формулу и параметры аппроксимации с размерностями и с правильно округлёнными погрешностями этих параметров (можно получить из консоли, где появляется информация после добавления полинома)
+    \item Цветовую палитру можете выбрать любую, главное чтобы цвета хорошо контрастировали с фоном. 
+    \item Экспортировать рисунок в векторном формате, например в \verb|.svg|. Конечный результат должен быть похож на тот, что представлен на рисунке ниже.
+    \begin{center}
+        \includegraphics[width=.7\textwidth]{plot.pdf}
+    \end{center}
 \end{enumerate}
 
 % \textbf{Контрольные вопросы} \\
