--- a/lab6.tex
+++ b/lab6.tex
@@ -292,7 +292,7 @@ x\textsubscript{2},\ldots,x\textsubscript{n} --} неизвестные вели
 \end{center}
 
 \variant{}
-\showNumTask. Найти величины токов во всех участках цепи, если $\varepsilon =20$ В, $\varepsilon =33$ В, внутренние сопротивления которых равны $0,2$ Ом и $0,5$ Ом соответственно. Внешние сопротивления $R =0,8$ Ом и $R =2$ Ом.
+\showNumTask. Найти величины токов во всех участках цепи, если $\varepsilon_1 =20$ В, $\varepsilon_1 =33$ В, внутренние сопротивления которых равны $0,2$ Ом и $0,5$ Ом соответственно. Внешние сопротивления $R_1 =0,8$ Ом и $R_2 =2$ Ом.
 \begin{center}
     \begin{circuitikz}[american, scale=.7, transform shape]
         \draw(0,0) to (0,4) to[generic, l=$R_1$] (4,4) to (4,2.5) to[generic, l=$R_2$] (4,0) to[battery1, v_=$\varepsilon_1$, l=$r_1$] (0,0);
