--- a/setup.tex
+++ b/setup.tex
@@ -64,7 +64,7 @@
 \sloppy %Выравнивание текст по ширине и решение проблемы переполнением строки
 \onehalfspacing %Полуторный интервал
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Добавление списка литературы
-\usepackage{polyglossia}[2014/05/21]            % Поддержка многоязычности (fontspec подгружается автоматически)
+\usepackage{polyglossia}%[2014/05/21]            % Поддержка многоязычности (fontspec подгружается автоматически)
 \setmainlanguage[babelshorthands=true]{russian}  % Язык по-умолчанию русский с поддержкой приятных команд пакета babel
 \setotherlanguage{english}                       % Дополнительный язык = английский (в американской вариации по-умолчанию)
 \setmonofont{Courier New}
@@ -74,6 +74,7 @@
 \newfontfamily\cyrillicfont{Times New Roman}
 \setsansfont{Arial}
 \newfontfamily\cyrillicfontsf{Arial}
+%%%%%%%%%%%%%%%%%%%%%%Подключение библиографии
 \usepackage[
     bibencoding=utf8,% кодировка bib файла
     sorting=none,% настройка сортировки списка литературы
